--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mathieucalba.androiduidesignpatterninpractice"
+    package="com.mathieucalba.yana"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,13 +9,13 @@
         android:targetSdkVersion="17" />
 
     <application
-        android:name="com.mathieucalba.androiduidesignpatterninpractice.UIDesignPatternApplication"
+        android:name="com.mathieucalba.yana.UIDesignPatternApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.mathieucalba.androiduidesignpatterninpractice.ui.activity.HomeActivity"
+            android:name="com.mathieucalba.yana.ui.activity.HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
