--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
     <application
         android:name="com.mathieucalba.yana.UIDesignPatternApplication"
         android:allowBackup="true"
