FIx YANAService reference in Manifest

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
 
         <service
-            android:name="com.mathieucalba.yana.YANAService"
+            android:name="com.mathieucalba.yana.services.YANAService"
             android:exported="false" />
     </application>
 
