Adding link to ActionBarSherlock 4.2

--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../../SVN/android/Libraries/ActionBarSherlock/4.2_2012-10-08/library
+android.library.reference.1=../ActionBarSherlock-4.2.0/library
