--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
     <application
         android:name="com.mathieucalba.yana.UIDesignPatternApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/YanaAppTheme" >
@@ -34,6 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.mathieucalba.yana.ui.activity.FeedItemActivity" />
 
         <service
             android:name="com.mathieucalba.yana.services.YANAService"
